--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+## h2 configuration ##
+spring.h2.console.enabled=true
+spring.h2.console.path=/db
+spring.datasource.url=jdbc:h2:mem:db
 
+## jpa configuration ##
+spring.jpa.show-sql=true
+
+## swagger configuration ##
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+##security configuration##
+jwt.token.secret=beer
+jwt.token.expired=25000
