--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,25 @@
 ## h2 configuration ##
-spring.h2.console.enabled=true
-spring.h2.console.path=/db
-spring.datasource.url=jdbc:h2:mem:db
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/db
+#spring.datasource.url=jdbc:h2:mem:db
 
 ## jpa configuration ##
 spring.jpa.show-sql=true
 
+##mysql configuration ##
+spring.datasource.url=jdbc:mysql://localhost:3306/beerreview?useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 
 ##security configuration##
 jwt.token.secret=beer
 jwt.token.expired=25000
+
+## configuration for Slf4j ##
+logging.pattern.console="%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
+logging.pattern.file="%date %level [%thread] %logger{10} [%file:%line] %msg%n"
+logging.file.name=D:\project\Beer_review\app.log
+logger.file.MaxFileSize=5MB
